deploy/kustomize/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: blog
  labels:
    app.kubernetes.io/part-of: imustdo.work
    istio-injection: enabled
    name: blog
